# agentic-invoice-generator

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  check.py  credentials.json  presentation-script.md  pyproject.toml  render.yaml  requirements.txt  schema.txt  vercel.json
.qwen/: settings.json
agent_prompts/: prompts.py
agents_work/: agents_work.py
backend/: main.py
backend/agents/: pydantic_models.py  runner.py
backend/agents/prompts/: delivery_prompt.py  template_prompt.py  validation_prompt.py
backend/api/: main.py
backend/utils/: formatters.py  validation.py
frontend/: userInterface.py
templates/: invoice.html
